<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/vehicleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicle"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"/>
    <TextView
        android:id="@+id/distanceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/vehicleTxt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"/>
    <TextView
        android:id="@+id/totalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/distanceTxt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"/>

    <Button
        android:id="@+id/RequestRideBtn"
        android:layout_width="311dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:text="@string/request_ride_now"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTxt" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="311dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:text="@string/go_back_to_beginning"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RequestRideBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>