<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/requestedTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_uber_has_been_requested"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/driverImg"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/driverImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/driver_image"
        app:layout_constraintTop_toBottomOf="@+id/requestedTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/driverIs"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/driver" />

    <TextView
        android:id="@+id/driverIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_driver_is"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/driverImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/driverName"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/driverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bart_simpson"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/driverIs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>